# rustdoc-include

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example_doc/: example.rs
examples/: example.md  example.rs
src/: attr.rs  fmt.rs  main.rs  text_pos.rs
tests/data/: crlf_md.expected.rs  crlf_md.rs  crlf_md_start_line.expected.rs  crlf_md_start_line.rs  crlf_rs_init.rs  crlf_rs_update.expected.rs  crlf_rs_update.rs  doc_use.expected.rs  doc_use.rs  empty_line.expected.rs  empty_line.md  empty_line.rs  end_line.expected.rs  end_line.rs  end_text.expected.rs  end_text.rs  init.expected.rs  init.rs  start_line.expected.rs  start_line.rs
