[package]
name = "rustdoc-include"
version = "0.1.1"
authors = ["frozenlib"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
ignore = "0.4.22"
anyhow = "1.0.79"
regex = "1.10.3"
parse-display = "0.9.0"
colored = "2.1.0"
once_cell = "1.19.0"
thiserror = "1.0.57"
