[package]
name = "rustdoc-include"
version = "0.1.1"
authors = ["frozenlib"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ignore = "0.4.22"
anyhow = "1.0.83"
regex = "1.10.4"
parse-display = "0.9.0"
yansi = "1.0.1"
once_cell = "1.19.0"
thiserror = "1.0.60"
